--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Secret</title>
+    <title>رسائل سرية</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f9f9f9;
             padding: 20px;
-            text-align: right; /* لضبط النص من اليمين لليسار */
+            text-align: right;
         }
 
         header {
@@ -17,7 +17,7 @@
             color: white;
             padding: 10px 0;
             text-align: center;
-            font-size: 28px; /* زيادة حجم الخط في الرأس */
+            font-size: 28px;
             font-weight: bold;
             border-radius: 5px;
             margin-bottom: 20px;
@@ -30,7 +30,7 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-            border: 2px solid #ff6f91; /* حدود ملونة */
+            border: 2px solid #ff6f91;
         }
 
         #messages {
@@ -47,70 +47,70 @@
             border-radius: 10px;
             color: white;
             font-weight: bold;
-            text-align: right; /* لضبط الرسالة من اليمين لليسار */
-            position: relative; /* للسماح بتنسيق إضافي */
+            text-align: right;
+            position: relative;
         }
 
         .message.received {
-            background-color: #ff6f91; /* لون وردي للرسالة الواردة */
-            font-size: 20px; /* حجم نص الرسالة الواردة */
+            background-color: #ff6f91;
+            font-size: 20px;
         }
 
         .message.pending {
-            background-color: #ff9800; /* لون برتقالي للرسائل المعلقة */
-            font-size: 16px; /* حجم نص الرسالة المعلقة */
-            opacity: 0.8; /* انخفاض الشفافية */
-            font-style: italic; /* خط مائل للرسائل المعلقة */
+            background-color: #ff9800;
+            font-size: 16px;
+            opacity: 0.8;
+            font-style: italic;
         }
 
         .message .date {
-            font-size: 12px; /* حجم خط التاريخ */
-            color: #ffffffcc; /* لون التاريخ ب opacity */
+            font-size: 12px;
+            color: #ffffffcc;
             position: absolute;
-            bottom: 5px; /* المسافة من الأسفل */
-            left: 10px; /* المسافة من اليسار */
+            bottom: 5px;
+            left: 10px;
         }
 
-        input[type="text"], input[type="datetime-local"] {
+        input[type="text"], input[type="datetime-local"], input[type="password"] {
             width: calc(100% - 20px);
             padding: 10px;
             margin: 5px 0;
-            border: 2px solid #ff6f91; /* حدود ملونة */
+            border: 2px solid #ff6f91;
             border-radius: 5px;
             direction: rtl;
-            font-size: 16px; /* حجم خط أكبر */
+            font-size: 16px;
         }
 
         textarea {
             width: calc(100% - 20px);
             padding: 10px;
             margin: 5px 0;
-            border: 2px solid #ff6f91; /* حدود ملونة */
+            border: 2px solid #ff6f91;
             border-radius: 5px;
-            resize: vertical; /* لتمكين تغيير الحجم عموديًا */
-            font-size: 16px; /* حجم خط أكبر */
+            resize: vertical;
+            font-size: 16px;
         }
 
         button {
-            background-color: #ff77a0; /* لون زر جميل */
+            background-color: #ff77a0;
             color: white;
             padding: 10px 15px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
             font-weight: bold;
-            font-size: 16px; /* حجم خط أكبر */
+            font-size: 16px;
         }
 
         button:hover {
-            background-color: #e55c7a; /* تغيير اللون عند التمرير */
+            background-color: #e55c7a;
         }
 
         .login, .message-form {
             display: none;
         }
 
-        .login.active, .message-form.active {
+        .message-form.active {
             display: block;
         }
 
@@ -119,28 +119,31 @@
             font-size: 20px;
             color: #ff6f91;
             text-align: center;
-            font-weight: bold; /* جعل الخط أكثر تميزًا */
+            font-weight: bold;
         }
-        
-        /* أيقونة القفل */
+
         .icon {
             font-size: 30px;
             margin-left: 10px;
-            vertical-align: middle; /* لضبط الأيقونة مع النص */
+            vertical-align: middle;
+        }
+
+        .new-message {
+            color: #ff9800;
         }
     </style>
 </head>
 <body>
     <header>
-        <span class="icon">🔒</span> <!-- أيقونة القفل -->
-        Secret
+        <span class="icon">🔒</span>
+        الرسائل السرية
     </header>
 
     <div class="container">
-        <div class="login active" id="login">
-            <h2>تسجيل الدخول</h2>
+        <div class="login" id="loginForm">
+            <h2>أدخل كلمة المرور</h2>
             <input type="password" id="password" placeholder="كلمة المرور" required>
-            <button id="loginBtn">دخول</button>
+            <button id="login">دخول</button>
         </div>
 
         <div class="message-form" id="messageForm">
@@ -148,38 +151,32 @@
             <div id="messages"></div>
             <textarea id="message" placeholder="اكتب رسالتك هنا..." rows="3" required></textarea>
             <input type="datetime-local" id="time" required>
-            <button id="send">إرسال   </button>
+            <button id="send">إرسال</button>
         </div>
 
         <footer>
-             ....🗝️فِي كُلِّ سَطْرٍ هُنَا، سِرُّ يُرْوَى 
+            🗝️كل شيء هنا هو سري
         </footer>
     </div>
 
     <script>
-        const correctPassword = "Heart4Teacher"; // كلمة المرور الموحدة
-        const messagesKey = "secret"; // مفتاح تخزين الرسائل في localStorage
+        const messagesKey = "secretMessages"; // مفتاح تخزين الرسائل في localStorage
+        const password = "1"; // استبدل بكلمة المرور الخاصة بك
         let messages = JSON.parse(localStorage.getItem(messagesKey)) || [];
 
         document.addEventListener('DOMContentLoaded', () => {
-            const storedPassword = localStorage.getItem('password');
-            if (storedPassword === correctPassword) {
-                loadMessages();
-                document.getElementById('login').classList.remove('active');
-                document.getElementById('messageForm').classList.add('active');
-            }
+            loadMessages();
+            document.getElementById('loginForm').style.display = 'block'; // عرض نموذج الدخول
         });
 
-        document.getElementById('loginBtn').addEventListener('click', function() {
-            const password = document.getElementById('password').value;
-
-            if (password === correctPassword) {
-                localStorage.setItem('password', password);
-                document.getElementById('login').classList.remove('active');
+        document.getElementById('login').addEventListener('click', function() {
+            const enteredPassword = document.getElementById('password').value;
+            if (enteredPassword === password) {
+                document.getElementById('loginForm').style.display = 'none';
                 document.getElementById('messageForm').classList.add('active');
                 loadMessages();
             } else {
-                alert('كلمة المرور غير صحيحة!');
+                alert('كلمة المرور خاطئة! حاول مرة أخرى.');
             }
         });
 
@@ -217,15 +214,15 @@
                     messageElement.appendChild(dateElement);
                 } else {
                     messageElement.classList.add('pending');
-                    messageElement.textContent = `رسالة مهمة ستصل في ${new Date(msg.time).toLocaleString()}`;
+                    const messageDate = new Date(msg.time).toLocaleString();
+                    messageElement.textContent = `ستصلك هذه الرسالة في: ${messageDate}`;
                 }
 
                 messagesDiv.appendChild(messageElement);
             });
         }
 
-        // تحديث الرسائل كل دقيقة للتحقق من الوقت
-        setInterval(loadMessages, 60000);
+        setInterval(loadMessages, 15000); // تحديث الرسائل كل دقيقة
     </script>
 </body>
 </html>
